--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "guzzlehttp/guzzle": "~6.0",
         "symfony/var-dumper": "^3.1",
-        "nesbot/carbon": "^1.21"
+        "nesbot/carbon": "^1.21",
+        "giggsey/libphonenumber-for-php": "^7.6"
     },
     "autoload": {
         "psr-4": {
