Implement Google driver

--- a/.debug-credentials.example
+++ b/.debug-credentials.example
@@ -8,5 +8,11 @@
         "scope": 2,
         "response_type": "code",
         "v": "5.53"
+    },
+    "google": {
+        "client_id": null,
+        "client_secret": null,
+        "redirect_url": "http://localhost:8001/debug.php",
+        "access_token": null
     }
 }
