--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "guzzlehttp/guzzle": "~6.0",
         "symfony/var-dumper": "^3.1",
         "nesbot/carbon": "^1.21",
-        "giggsey/libphonenumber-for-php": "^7.6"
+        "giggsey/libphonenumber-for-php": "^7.6",
+        "google/apiclient": "^2.0"
     },
     "autoload": {
         "psr-4": {
