--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "~6.0",
-        "symfony/var-dumper": "^3.1",
+        "symfony/var-dumper": "3.*",
         "nesbot/carbon": "^1.21",
         "giggsey/libphonenumber-for-php": "^7.6",
         "google/apiclient": "^2.0"
